moved dashboard navigation import out of base-fullscreen and into individual pages in frontend

--- a/frontend/templates/home/django-material-dashboard/sign-in.html
+++ b/frontend/templates/home/django-material-dashboard/sign-in.html
@@ -6,6 +6,8 @@
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
+{% include 'includes/django-material-dashboard/navigation-fullscreen.html' %}
+
 {% block content %}
     
   <div class="page-header align-items-start min-vh-100" 
