--- a/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
+++ b/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
@@ -41,7 +41,7 @@
 </head>
 <body class="bg-gray-200">
   
-  {% include 'includes/django-material-dashboard/navigation-fullscreen.html' %}
+  <!-- {% include 'includes/django-material-dashboard/navigation-fullscreen.html' %} -->
 
   <main class="main-content mt-0">
     
