--- a/frontend/templates/home/django-material-dashboard/sign-up.html
+++ b/frontend/templates/home/django-material-dashboard/sign-up.html
@@ -6,6 +6,8 @@
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
+{% include 'includes/django-material-dashboard/navigation-fullscreen.html' %}
+
 {% block content %}
 
     <section>
