updated template content in dashboard frontend

--- a/frontend/templates/account/django-material-dashboard/register.html
+++ b/frontend/templates/account/django-material-dashboard/register.html
@@ -22,7 +22,7 @@
               <div class="card card-plain">
                 <div class="card-header">
                   <h4 class="font-weight-bolder">
-                    Django Material Dashboard
+                    Metadata Dashboard
                   </h4>
                   <p class="mb-0">
                     {% if msg %}
