--- a/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
@@ -4,7 +4,7 @@
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute start-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="https://appseed.us/admin-dashboards/django-dashboard-material" target="_blank">
         <img src="{% static 'assets/img/logo-ct.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="me-1 font-weight-bold text-white">Material Dashboard 2</span>
+        <span class="me-1 font-weight-bold text-white">Metadata Dashboard</span>
       </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
@@ -32,22 +32,6 @@
               <i class="material-icons-round opacity-10">receipt_long</i>
             </div>
             <span class="nav-link-text me-1">الفواتير</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="/dashboard/virtual-reality.html">
-            <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons-round opacity-10">view_in_ar</i>
-            </div>
-            <span class="nav-link-text me-1">الواقع الافتراضي</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active bg-gradient-primary" href="/dashboard/rtl.html">
-            <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons-round opacity-10">format_textdirection_r_to_l</i>
-            </div>
-            <span class="nav-link-text me-1">RTL</span>
           </a>
         </li>
         <li class="nav-item">
@@ -80,7 +64,7 @@
       <div class="mx-3">
         <a class="btn bg-gradient-primary mt-4 w-100" 
            target="_blank" 
-           href="https://appseed.us/product/django-material-dashboard2-pro" type="button">Upgrade to pro</a>
+           href="/" type="button">Main</a>
       </div>
     </div>
   </aside>
