--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -5,7 +5,7 @@
       <a class="navbar-brand m-0" 
          href="https://appseed.us/admin-dashboards/flask-dashboard-material-design" target="_blank">
         <img src="{% static 'assets/img/logo-ct.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold text-white">Material Dashboard 2</span>
+        <span class="ms-1 font-weight-bold text-white">Metadata Dashboard</span>
       </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
@@ -36,23 +36,6 @@
               <i class="material-icons opacity-10">receipt_long</i>
             </div>
             <span class="nav-link-text ms-1">Billing</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'virtual' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/dashboard/virtual-reality.html">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">view_in_ar</i>
-            </div>
-            <span class="nav-link-text ms-1">Virtual Reality</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white " href="/dashboard/rtl.html">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">format_textdirection_r_to_l</i>
-            </div>
-            <span class="nav-link-text ms-1">RTL</span>
           </a>
         </li>
         <li class="nav-item">
@@ -90,7 +73,7 @@
       <div class="mx-3">
         <a class="btn bg-gradient-primary mt-4 w-100" 
            target="_blank" 
-           href="https://appseed.us/product/django-material-dashboard2-pro" type="button">Upgrade to pro</a>
+           href="/" type="button">Main</a>
       </div>
     </div>
   </aside>
