--- a/frontend/templates/layouts/django-material-dashboard/base.html
+++ b/frontend/templates/layouts/django-material-dashboard/base.html
@@ -22,7 +22,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png' %}">
   <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
   <title>
-    Django Material Dashboard 2 - {% block title %}{% endblock %} | AppSeed
+    Metadata Dashboard - {% block title %}{% endblock %} | Maine EPSCoR
   </title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
