updated content in templates for frontend

--- a/frontend/templates/account/django-material-dashboard/register.html
+++ b/frontend/templates/account/django-material-dashboard/register.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
 {% load static %}
 
-{% block title %} Sign UP {% endblock %} 
+{% block title %} Sign up {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -72,7 +72,7 @@
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-2 text-sm mx-auto">
                     Already have an account?
-                    <a href="{% url 'dashboard_login' %}" class="text-primary text-gradient font-weight-bold">Sign IN</a>
+                    <a href="{% url 'dashboard_login' %}" class="text-primary text-gradient font-weight-bold">Sign in</a>
                   </p>
                 </div>
               </div>
