--- a/frontend/templates/account/django-material-kit/register.html
+++ b/frontend/templates/account/django-material-kit/register.html
@@ -74,14 +74,14 @@
                   </div>
                   <p class="mt-4 text-sm text-center">
                     Already have an account?
-                    <a href="{% url 'login' %}" class="text-primary text-gradient font-weight-bold">Sign IN</a>
+                    <a href="{% url 'login' %}" class="text-primary text-gradient font-weight-bold">Sign in</a>
                   </p>
                 </form>
 
               {% else %} 
 
                   <p class="mt-4 text-sm text-center">
-                    <a href="{% url 'login' %}" class="text-primary text-gradient font-weight-bold">Sign IN</a> 
+                    <a href="{% url 'login' %}" class="text-primary text-gradient font-weight-bold">Sign in</a>
                   </p>
               
               {% endif %}
