--- a/frontend/templates/home/django-material-dashboard/sign-up.html
+++ b/frontend/templates/home/django-material-dashboard/sign-up.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
 {% load static %}
 
-{% block title %} Sign UP {% endblock %} 
+{% block title %} Sign up {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
