--- a/frontend/templates/account/django-material-dashboard/login.html
+++ b/frontend/templates/account/django-material-dashboard/login.html
@@ -55,7 +55,7 @@
                 </div>
                 <p class="mt-4 text-sm text-center">
                   Don't have an account?
-                  <a href="{% url 'dashboard_register' %}" class="text-primary text-gradient font-weight-bold">Sign UP</a>
+                  <a href="{% url 'dashboard_register' %}" class="text-primary text-gradient font-weight-bold">Sign up</a>
                 </p>
               </form>
             </div>
