--- a/frontend/templates/home/django-material-kit/sign-in.html
+++ b/frontend/templates/home/django-material-kit/sign-in.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base-fullscreen.html" %}
 {% load static %}
 
-{% block title %} Sign IN {% endblock %} 
+{% block title %} Sign in {% endblock %}
 
 {% block body_class %} sign-in-basic {% endblock %}
 
