--- a/frontend/templates/includes/django-material-dashboard/footer.html
+++ b/frontend/templates/includes/django-material-dashboard/footer.html
@@ -4,18 +4,17 @@
           <div class="row align-items-center justify-content-lg-between">
             <div class="col-lg-6 mb-lg-0 mb-4">
               <div class="copyright text-center text-sm text-muted text-lg-start">
-                &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">Creative Tim</a>
-                Coded by AppSeed.
+                &copy; <a href="https://github.com/melkimble" class="font-weight-bold" target="_blank">melkimble</a>
               </div>
             </div>
             <div class="col-lg-6">
               <ul class="nav nav-footer justify-content-center justify-content-lg-end">
                 <li class="nav-item">
-                  <a href="https://appseed.us/admin-dashboards/django-dashboard-material" 
-                     class="nav-link text-muted" target="_blank">Product</a>
+                  <a href="https://github.com/Maine-eDNA/medna-metadata"
+                     class="nav-link text-muted" target="_blank">Sources</a>
                 </li>
                 <li class="nav-item">
-                  <a href="https://appseed.us/support" class="nav-link text-muted" target="_blank">Support</a>
+                  <a href="/main/support/" class="nav-link text-muted" target="_blank">Support</a>
                 </li>
               </ul>
             </div>
