--- a/frontend/templates/includes/django-material-dashboard/fixed-plugin.html
+++ b/frontend/templates/includes/django-material-dashboard/fixed-plugin.html
@@ -58,15 +58,14 @@
           </div>
         </div>
         <hr class="horizontal dark my-sm-4">
-        <a class="btn btn-outline-dark w-100" target="_blank" href="https://appseed.us/admin-dashboards/django-dashboard-material">View Product</a>
         <div class="w-100 text-center">
-          <a class="github-button" href="https://github.com/app-generator/django-dashboard-material" 
+          <a class="github-button" href="https://github.com/Maine-eDNA/medna-metadata"
              data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star Product on GitHub">Star</a>
           <h6 class="mt-3">Thank you for sharing!</h6>
-          <a href="https://twitter.com/intent/tweet?text=Check%20Material%20UI%20Dashboard%20made%20by%20%40CreativeTim%20%23webdesign%20%23dashboard%20%23bootstrap5&amp;url=https%3A%2F%2Fwww.creative-tim.com%2Fproduct%2Fsoft-ui-dashboard" class="btn btn-dark mb-0 me-2" target="_blank">
+          <a href="https://twitter.com/intent/tweet?text=Check+out+Maine-eDNA+metadata+-+a+data+management+system+for+tracking+environmental+DNA+samples%3A+https%3A%2F%2Fgithub.com%2FMaine-eDNA%2Fmedna-metadata" class="btn btn-dark mb-0 me-2" target="_blank">
             <i class="fab fa-twitter me-1" aria-hidden="true"></i> Tweet
           </a>
-          <a href="https://www.facebook.com/sharer/sharer.php?u=https://github.com/app-generator/django-dashboard-material" 
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https://github.com/Maine-eDNA/medna-metadata"
              class="btn btn-dark mb-0 me-2" target="_blank">
             <i class="fab fa-facebook-square me-1" aria-hidden="true"></i> Share
           </a>
