readded link in fixed_plugin.html

--- a/frontend/templates/includes/django-material-dashboard/fixed-plugin.html
+++ b/frontend/templates/includes/django-material-dashboard/fixed-plugin.html
@@ -58,6 +58,7 @@
           </div>
         </div>
         <hr class="horizontal dark my-sm-4">
+        <a class="btn btn-outline-dark w-100" target="_blank" href="https://github.com/Maine-eDNA/medna-metadata">View Repository</a>
         <div class="w-100 text-center">
           <a class="github-button" href="https://github.com/Maine-eDNA/medna-metadata"
              data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star Product on GitHub">Star</a>
