--- a/frontend/templates/home/django-material-dashboard/virtual-reality.html
+++ b/frontend/templates/home/django-material-dashboard/virtual-reality.html
@@ -19,7 +19,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png' %}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/medna-icon.png' %}">
   <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
   <title>
     Material Dashboard 2 by Creative Tim
