--- a/templates/drf-yasg/swagger-ui.html
+++ b/templates/drf-yasg/swagger-ui.html
@@ -1,110 +1,77 @@
-{% extends "layouts/django-material-kit/base.html" %}
-
+{% extends "drf-yasg/swagger-ui.html" %}
 {% load static %}
-{% block title %}{{ title }}{% endblock %}
+<!--
+=========================================================
+* Material Kit 2 - v3.0.0
+=========================================================
 
-{% block body_class %} about-us {% endblock %}
+* Product Page:  https://www.creative-tim.com/product/material-kit
+* Copyright 2021 Creative Tim (https://www.creative-tim.com)
+* Coded by www.creative-tim.com
 
-<!-- Specific Page CSS goes HERE  -->
-{% block stylesheets %}{% endblock stylesheets %}
+ =========================================================
 
-{% block content %}
-
-{% include 'includes/django-material-kit/navigation-transparent.html' %}
-
-{% block favicon %}
-    {# -- Maybe replace the favicon -- #}
-    <link rel="icon" type="image/png" href="{% static 'drf-yasg/swagger-ui-dist/favicon-32x32.png' %}"/>
+* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. -->
+{% block extra_head %}
+    {# -- Add any extra HTML heads tags here - except scripts and styles -- #}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>
+    Maine-eDNA Metadata - {% block title %}{% endblock %} | Maine EPSCoR
+    </title>
 {% endblock %}
 
-{% block main_styles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'drf-yasg/style.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'drf-yasg/swagger-ui-dist/swagger-ui.css' %}">
+{% block extra_styles %}
+    {# -- Add any additional CSS scripts here -- #}
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/medna-icon.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+    <!-- Nucleo Icons -->
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-icons.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-svg.css' %}">
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <!-- CSS Files -->
+    <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/material-kit.css' %}">
 {% endblock %}
-
-
-<body class="swagger-body">
 
 {% block extra_body %}
-  <header class="bg-gradient-dark">
-    <div class="page-header min-vh-75" style="background-image: url('{% static 'assets/img/bg9.jpg');">
-      <span class="mask bg-gradient-dark opacity-6"></span>
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8 text-center mx-auto my-auto">
-            <h1 class="text-white">Work with an amazing design</h1>
-            <p class="lead mb-4 text-white opacity-8">We’re constantly trying to express ourselves and actualize our dreams. If you have the opportunity to play this game</p>
-            <button type="submit" class="btn bg-white text-dark">Create Account</button>
-            <h6 class="text-white mb-2 mt-5">Find us on</h6>
-            <div class="d-flex justify-content-center">
-              <a href="javascript:;"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
-              <a href="javascript:;"><i class="fab fa-instagram text-lg text-white me-4"></i></a>
-              <a href="javascript:;"><i class="fab fa-twitter text-lg text-white me-4"></i></a>
-              <a href="javascript:;"><i class="fab fa-google-plus text-lg text-white"></i></a>
+    {# -- Add any header/body markup here (rendered BEFORE the swagger-ui/redoc element) -- #}
+    <body class="{% block body_class %}{% endblock %} bg-gray-200">
+      {% include 'includes/django-material-kit/navigation-transparent.html' %}
+      <header class="bg-gradient-dark">
+        <div class="page-header min-vh-75" style="background-image: url('{% static 'assets/img/bg9.jpg');">
+          <span class="mask bg-gradient-dark opacity-6"></span>
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8 text-center mx-auto my-auto">
+                <h1 class="text-white">Work with an amazing design</h1>
+                <p class="lead mb-4 text-white opacity-8">We’re constantly trying to express ourselves and actualize our dreams. If you have the opportunity to play this game</p>
+                <button type="submit" class="btn bg-white text-dark">Create Account</button>
+                <h6 class="text-white mb-2 mt-5">Find us on</h6>
+                <div class="d-flex justify-content-center">
+                  <a href="javascript:;"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
+                  <a href="javascript:;"><i class="fab fa-instagram text-lg text-white me-4"></i></a>
+                  <a href="javascript:;"><i class="fab fa-twitter text-lg text-white me-4"></i></a>
+                  <a href="javascript:;"><i class="fab fa-google-plus text-lg text-white"></i></a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </header>
+      </header>
+    </body>
 {% endblock %}
-
-<div id="swagger-ui"></div>
 
 {% block footer %}
     {# -- Add any footer markup here (rendered AFTER the swagger-ui/redoc element) -- #}
+    {% include 'includes/django-material-kit/footer.html' %}
 {% endblock %}
 
-<script id="swagger-settings" type="application/json">{{ swagger_settings | safe }}</script>
-<script id="oauth2-config" type="application/json">{{ oauth2_config | safe }}</script>
-
-{% block main_scripts %}
-    <script src="{% static 'drf-yasg/swagger-ui-dist/swagger-ui-bundle.js' %}"></script>
-    <script src="{% static 'drf-yasg/swagger-ui-dist/swagger-ui-standalone-preset.js' %}"></script>
-    <script src="{% static 'drf-yasg/insQ.min.js' %}"></script>
-    <script src="{% static 'drf-yasg/immutable.min.js' %}"></script>
-    <script src="{% static 'drf-yasg/url-polyfill.min.js' %}"></script>
-    <script src="{% static 'drf-yasg/swagger-ui-init.js' %}"></script>
-{% endblock %}
 {% block extra_scripts %}
     {# -- Add any additional scripts here -- #}
+    {% include 'includes/django-material-kit/scripts.html' %}
 {% endblock %}
-
-<a id="oauth2-redirect-url" href="{% static 'drf-yasg/swagger-ui-dist/oauth2-redirect.html' %}" class="hidden"></a>
-
-{% if USE_SESSION_AUTH %}
-    <div id="django-session-auth" class="hidden">
-        {% block session_auth_button %}
-            {% csrf_token %}
-
-            {% block user_context_message %}
-                {% if request.user.is_authenticated %}
-                    <div class="hello">
-                        <span class="django-session">Django</span> <span
-                            class="label label-primary">{{ request.user }}</span>
-                    </div>
-                {% endif %}
-            {% endblock %}
-
-            {% if request.user.is_authenticated %}
-                <div class='btn authorize'>
-                    <a id="auth" class="header__btn" href="{{ LOGOUT_URL }}?next={{ request.path }}" data-sw-translate>
-                        {% block django_logout_message %}
-                            Django Logout
-                        {% endblock %}
-                    </a>
-                </div>
-            {% else %}
-                <div class='btn authorize'>
-                    <a id="auth" class="header__btn" href="{{ LOGIN_URL }}?next={{ request.path }}" data-sw-translate>
-                        {% block django_login_message %}
-                            Django Login
-                        {% endblock %}
-                    </a>
-                </div>
-            {% endif %}
-        {% endblock %}
-    </div>
-{% endif %}
-
-{% endblock content %}
