--- a/frontend/templates/drf-yasg/swagger-ui.html
+++ b/frontend/templates/drf-yasg/swagger-ui.html
@@ -21,6 +21,11 @@
     </title>
 {% endblock %}
 
+{% block favicon %}
+    {# -- Maybe replace the favicon -- #}
+    <link rel="icon" type="image/png" href="{% static 'drf-yasg/swagger-ui-dist/favicon-32x32.png' %}"/>
+{% endblock %}
+
 {% block extra_styles %}
     {# -- Add any additional CSS scripts here -- #}
     <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/medna-icon.png' %}">
@@ -43,25 +48,6 @@
     <body class="{% block body_class %}{% endblock %} bg-gray-200">
       {% include 'includes/django-material-kit/navigation-transparent.html' %}
       <header class="bg-gradient-dark">
-        <div class="page-header min-vh-75" style="background-image: url('{% static 'assets/img/bg9.jpg');">
-          <span class="mask bg-gradient-dark opacity-6"></span>
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-lg-8 text-center mx-auto my-auto">
-                <h1 class="text-white">Work with an amazing design</h1>
-                <p class="lead mb-4 text-white opacity-8">We’re constantly trying to express ourselves and actualize our dreams. If you have the opportunity to play this game</p>
-                <button type="submit" class="btn bg-white text-dark">Create Account</button>
-                <h6 class="text-white mb-2 mt-5">Find us on</h6>
-                <div class="d-flex justify-content-center">
-                  <a href="javascript:;"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
-                  <a href="javascript:;"><i class="fab fa-instagram text-lg text-white me-4"></i></a>
-                  <a href="javascript:;"><i class="fab fa-twitter text-lg text-white me-4"></i></a>
-                  <a href="javascript:;"><i class="fab fa-google-plus text-lg text-white"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </header>
     </body>
 {% endblock %}
