--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -42,7 +42,7 @@
   {% include 'includes/django-material-kit/navigation.html' %}
 
   <header class="header-2">
-    <div class="page-header min-vh-75 relative" style="background-image: url('{% static 'assets/img/bg1.jpg' %}')">
+    <div class="page-header min-vh-75 relative" style="background-image: url('{% static 'assets/img/bg1-dark.jpg' %}')">
       <span class="mask bg-gradient-primary opacity-4"></span>
       <div class="container">
         <div class="row">
