--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -85,8 +85,8 @@
                     <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-swagger-ui' %}">
                       Swagger
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-features.html">
-                      Features
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-redoc' %}">
+                      Redoc
                     </a>
                   </div>
                 </li>
@@ -206,8 +206,8 @@
                   <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-swagger-ui' %}">
                     Swagger
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-features.html">
-                    Features
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-redoc' %}">
+                    Redoc
                   </a>
                   <div class="d-flex mb-2 mt-3">
                     <div class="icon h-10 me-3 d-flex mt-1">
