--- a/frontend/templates/drf-yasg/redoc.html
+++ b/frontend/templates/drf-yasg/redoc.html
@@ -47,7 +47,10 @@
     {# -- Add any header/body markup here (rendered BEFORE the swagger-ui/redoc element) -- #}
     <body class="{% block body_class %}{% endblock %} bg-gray-200">
       {% include 'includes/django-material-kit/navigation-transparent.html' %}
-      <header class="bg-gradient-dark">
+      <header>
+        <div class="page-header min-height-400" style="background-image: url('{% static 'assets/img/city-profile.jpg' %}');" loading="lazy">
+          <span class="mask bg-gradient-dark opacity-8"></span>
+        </div>
       </header>
     </body>
 {% endblock %}
