--- a/frontend/templates/drf-yasg/swagger-ui.html
+++ b/frontend/templates/drf-yasg/swagger-ui.html
@@ -47,9 +47,20 @@
     {# -- Add any header/body markup here (rendered BEFORE the swagger-ui/redoc element) -- #}
     <body class="{% block body_class %}{% endblock %} bg-gray-200">
       {% include 'includes/django-material-kit/navigation-transparent.html' %}
-      <header>
-        <div class="page-header min-height-400" style="background-image: url('{% static 'assets/img/city-profile.jpg' %}');" loading="lazy">
-          <span class="mask bg-gradient-dark opacity-8"></span>
+      <header class="bg-gradient-dark">
+        <div class="page-header min-vh-75" style="background-image: url('{% static 'assets/img/bg9.jpg');">
+          <span class="mask bg-gradient-dark opacity-6"></span>
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8 text-center mx-auto my-auto">
+                <h1 class="text-white">Swagger Documentation</h1>
+                <p class="lead mb-4 text-white opacity-8">Automated generation of Swagger/OpenAPI 2.0 schemas with drf-yasg.</p>
+                  <div class="d-flex justify-content-center">
+                      <a href="https://github.com/axnsan12/drf-yasg"><i class="fab fa-github text-lg text-white me-4"></i></a>
+                  </div>
+              </div>
+            </div>
+          </div>
         </div>
       </header>
     </body>
