updated swagger template

--- a/frontend/templates/drf-yasg/swagger-ui.html
+++ b/frontend/templates/drf-yasg/swagger-ui.html
@@ -55,9 +55,8 @@
               <div class="col-lg-8 text-center mx-auto my-auto">
                 <h1 class="text-white">Swagger Documentation</h1>
                 <p class="lead mb-4 text-white opacity-8">Automated generation of Swagger/OpenAPI 2.0 schemas with drf-yasg.</p>
-                  <h6 class="text-white mb-2 mt-5">Find the repo on</h6>
                   <div class="d-flex justify-content-center">
-                      <a href="https://github.com/axnsan12/drf-yasg"><i class="fab fa-github text-lg text-white me-4"></i></a>
+                      <a href="https://github.com/axnsan12/drf-yasg"><i class="fa fa-github fa-5x text-lg text-white me-4"></i></a>
                   </div>
               </div>
             </div>
