updated swagger template

--- a/frontend/templates/drf-yasg/swagger-ui.html
+++ b/frontend/templates/drf-yasg/swagger-ui.html
@@ -56,7 +56,7 @@
                 <h1 class="text-white">Swagger Documentation</h1>
                 <p class="lead mb-4 text-white opacity-8">Automated generation of Swagger/OpenAPI 2.0 schemas with drf-yasg.</p>
                   <div class="d-flex justify-content-center">
-                      <a href="https://github.com/axnsan12/drf-yasg"><i class="fa fa-github fa-5x text-lg text-white me-4"></i></a>
+                      <a href="https://github.com/axnsan12/drf-yasg"><i class="fab fa-github text-lg text-white me-10"></i></a>
                   </div>
               </div>
             </div>
