--- a/frontend/templates/drf-yasg/redoc.html
+++ b/frontend/templates/drf-yasg/redoc.html
@@ -53,7 +53,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8 text-center mx-auto my-auto">
-                <h1 class="text-white">Swagger Documentation</h1>
+                <h1 class="text-white">Redoc Documentation</h1>
                 <p class="lead mb-4 text-white opacity-8">Automated generation of OpenAPI 2.0 schemas with drf-yasg.</p>
                   <div class="d-flex justify-content-center">
                       <a href="https://github.com/axnsan12/drf-yasg"><i class="fab fa-github text-4xl text-white me-4"></i></a>
