--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -944,103 +944,7 @@
       </div>
     </div>
     <!-- -------- END Content Presentation Docs ------- -->
-    <section class="py-7">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 mx-auto text-center">
-            <h2 class="mb-0">Trusted by over</h2>
-            <h2 class="text-gradient text-primary mb-3">1,679,477+ web developers</h2>
-            <p class="lead">Many Fortune 500 companies, startups, universities and governmental institutions love Creative Tim's products. </p>
-          </div>
-        </div>
-        <div class="row mt-6">
-          <div class="col-lg-4 col-md-8">
-            <div class="card card-plain">
-              <div class="card-body">
-                <div class="author">
-                  <div class="name">
-                    <h6 class="mb-0 font-weight-bolder">Nick Willever</h6>
-                    <div class="stats">
-                      <i class="far fa-clock"></i> 1 day ago
-                    </div>
-                  </div>
-                </div>
-                <p class="mt-4">"This is an excellent product, the documentation is excellent and helped me get things done more efficiently."</p>
-                <div class="rating mt-3">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-8 ms-md-auto">
-            <div class="card bg-gradient-primary">
-              <div class="card-body">
-                <div class="author align-items-center">
-                  <div class="name">
-                    <h6 class="text-white mb-0 font-weight-bolder">Shailesh Kushwaha</h6>
-                    <div class="stats text-white">
-                      <i class="far fa-clock"></i> 1 week ago
-                    </div>
-                  </div>
-                </div>
-                <p class="mt-4 text-white">"I found solution to all my design needs from Creative Tim. I use them as a freelancer in my hobby projects for fun! And its really affordable, very humble guys !!!"</p>
-                <div class="rating mt-3">
-                  <i class="fas fa-star text-white"></i>
-                  <i class="fas fa-star text-white"></i>
-                  <i class="fas fa-star text-white"></i>
-                  <i class="fas fa-star text-white"></i>
-                  <i class="fas fa-star text-white"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-8">
-            <div class="card card-plain">
-              <div class="card-body">
-                <div class="author">
-                  <div class="name">
-                    <h6 class="mb-0 font-weight-bolder">Samuel Kamuli</h6>
-                    <div class="stats">
-                      <i class="far fa-clock"></i> 3 weeks ago
-                    </div>
-                  </div>
-                </div>
-                <p class="mt-4">"Great product. Helped me cut the time to set up a site. I used the components within instead of starting from scratch. I highly recommend for developers who want to spend more time on the backend!."</p>
-                <div class="rating mt-3">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr class="horizontal dark my-5">
-        <div class="row">
-          <div class="col-lg-2 col-md-4 col-6 ms-auto">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-apple.svg' %}" alt="Logo">
-          </div>
-          <div class="col-lg-2 col-md-4 col-6">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-facebook.svg' %}" alt="Logo">
-          </div>
-          <div class="col-lg-2 col-md-4 col-6">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-nasa.svg' %}" alt="Logo">
-          </div>
-          <div class="col-lg-2 col-md-4 col-6 ms-lg-0 ms-md-auto">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-vodafone.svg' %}" alt="Logo">
-          </div>
-          <div class="col-lg-2 col-md-4 col-6 me-md-auto mx-md-0 mx-auto">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-digitalocean.svg' %}" alt="Logo">
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- -------- START Content Contributor Block ------- -->
     <section class="py-sm-7" id="download-soft-ui">
       <div class="bg-gradient-dark position-relative m-3 border-radius-xl overflow-hidden">
         <img src="{% static 'assets/img/shapes/waves-white.svg' %}" alt="pattern-lines" class="position-absolute start-0 top-md-0 w-100 opacity-2">
@@ -1068,7 +972,7 @@
                 </div>
                 <div class="col-lg-2 col-4">
                   <a href="https://github.com/app-generator/django-material-kit">
-                    <img src="{% static 'assets/img/logo-ct-dark.png' %}" class="img-fluid opacity-6" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Material Kit 2 - Free & Open Source Web UI Kit built over Bootstrap 5 by Creative Tim">
+                    <img src="{% static 'assets/img/logo-medna-dark.png' %}" class="img-fluid opacity-6" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Material Kit 2 - Free & Open Source Web UI Kit built over Bootstrap 5 by Creative Tim">
                   </a>
                 </div>
                 <div class="col-lg-2 col-4">
@@ -1097,6 +1001,7 @@
         </div>
       </div>
     </section>
+    <!-- -------- END Content Contributor Block ------- -->
     <section class="my-5">
       <div class="container">
         <div class="row">
