--- a/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
@@ -3,7 +3,7 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute start-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="https://appseed.us/admin-dashboards/django-dashboard-material" target="_blank">
-        <img src="{% static 'assets/img/logo-ct.png' %}" class="navbar-brand-img h-100" alt="main_logo">
+        <img src="{% static 'assets/img/logo-medna-light.png' %}" class="navbar-brand-img h-100" alt="main_logo">
         <span class="me-1 font-weight-bold text-white">Metadata Dashboard</span>
       </a>
     </div>
