updated all background-image urls

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -94,14 +94,14 @@
           <div class="col-lg-4 ms-auto me-auto p-lg-4 mt-lg-0 mt-4">
             <div class="rotating-card-container">
               <div class="card card-rotate card-background card-background-mask-primary shadow-primary mt-md-0 mt-5">
-                <div class="front front-background" style="background-image: url(https://images.unsplash.com/photo-1569683795645-b62e50fbf103?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80); background-size: cover;">
+                <div class="front front-background" style="background-image: url(https://images.unsplash.com/photo-1596466561931-5537af89759f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80); background-size: cover;">
                   <div class="card-body py-7 text-center">
                     <i class="material-icons text-white text-4xl my-3">touch_app</i>
                     <h3 class="text-white">Feel the <br /> Material Kit</h3>
                     <p class="text-white opacity-8">All the Bootstrap components that you need in a development have been re-design with the new look.</p>
                   </div>
                 </div>
-                <div class="back back-background" style="background-image: url(https://images.unsplash.com/photo-1498889444388-e67ea62c464b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1365&q=80); background-size: cover;">
+                <div class="back back-background" style="background-image: url(https://images.unsplash.com/photo-1630691431017-04763cfdf785?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80); background-size: cover;">
                   <div class="card-body pt-7 text-center">
                     <h3 class="text-white">Discover More</h3>
                     <p class="text-white opacity-8"> You will save a lot of time going from prototyping to full-functional code because all elements are implemented.</p>
