--- a/frontend/templates/home/django-material-kit/ui-sections-hero-sections.html
+++ b/frontend/templates/home/django-material-kit/ui-sections-hero-sections.html
@@ -133,7 +133,7 @@
       </div>
     </div>
   </nav>
-  <div class="page-header min-vh-100" style="background-image: url(&#39;https://images.unsplash.com/photo-1520769945061-0a448c463865?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80&#39;);" loading="lazy">
+  <div class="page-header min-vh-100" style="background-image: url(&#39;https://images.unsplash.com/photo-1601512417113-23858e11789b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80&#39;);" loading="lazy">
     <span class="mask bg-gradient-dark opacity-5"></span>
     <div class="container">
       <div class="row">
