--- a/frontend/templates/home/django-material-dashboard/sign-in.html
+++ b/frontend/templates/home/django-material-dashboard/sign-in.html
@@ -11,7 +11,7 @@
 {% include 'includes/django-material-dashboard/navigation-fullscreen.html' %}
     
   <div class="page-header align-items-start min-vh-100" 
-        style="background-image: url('https://images.unsplash.com/photo-1497294815431-9365093b7331?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');">
+        style="background-image: url('{% static 'assets/img/bg0-dark.jpg' %}');">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container my-auto">
       <div class="row">
