--- a/frontend/templates/home/django-material-kit/api-swagger.html
+++ b/frontend/templates/home/django-material-kit/api-swagger.html
@@ -13,7 +13,7 @@
   {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
   <header class="bg-gradient-dark">
-    <div class="page-header min-vh-75" style="background-image: url('{% static 'assets/img/bg9.jpg');">
+    <div class="page-header min-vh-75" style="background-image: url('https://images.unsplash.com/photo-1603873046049-b4e102c85bd9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80');">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row justify-content-center">
