--- a/frontend/templates/home/django-material-kit/author.html
+++ b/frontend/templates/home/django-material-kit/author.html
@@ -13,7 +13,7 @@
   {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
   <header>
-    <div class="page-header min-height-400" style="background-image: url('{% static 'assets/img/city-profile.jpg' %}');" loading="lazy">
+    <div class="page-header min-height-400" style="background-image: url('https://images.unsplash.com/photo-1572884299015-34f1e9311a68?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80');" loading="lazy">
       <span class="mask bg-gradient-dark opacity-8"></span>
     </div>
   </header>
@@ -139,7 +139,7 @@
           </div>
           <div class="col-lg-3 col-md-12 col-12">
             <div class="card card-blog card-background cursor-pointer">
-              <div class="full-background" style="background-image: url('{% static 'assets/img/examples/blog2.jpg' %}')" loading="lazy"></div>
+              <div class="full-background" style="background-image: url('https://images.unsplash.com/photo-1596808458255-6bb96beb2dbe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=80')" loading="lazy"></div>
               <div class="card-body">
                 <div class="content-left text-start my-auto py-4">
                   <h2 class="card-title text-white">Flexible work hours</h2>
@@ -163,7 +163,7 @@
         <div class="col">
           <div class="card box-shadow-xl overflow-hidden mb-5">
             <div class="row">
-              <div class="col-lg-5 position-relative bg-cover px-0" style="background-image: url('{% static 'assets/img/examples/blog2.jpg' %}')" loading="lazy">
+              <div class="col-lg-5 position-relative bg-cover px-0" style="background-image: url('https://images.unsplash.com/photo-1596808458255-6bb96beb2dbe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=80')" loading="lazy">
                 <div class="z-index-2 text-center d-flex h-100 w-100 d-flex m-auto justify-content-center">
                   <div class="mask bg-gradient-dark opacity-8"></div>
                   <div class="p-5 ps-sm-8 position-relative text-start my-auto z-index-2">
