updated about-us template in frontend

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -18,15 +18,14 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center mx-auto my-auto">
-            <h1 class="text-white">Work with an amazing design</h1>
-            <p class="lead mb-4 text-white opacity-8">We’re constantly trying to express ourselves and actualize our dreams. If you have the opportunity to play this game</p>
-            <button type="submit" class="btn bg-white text-dark">Create Account</button>
+            <h1 class="text-white">Maine-eDNA Metadata Team</h1>
+            <p class="lead mb-4 text-white opacity-8">An interdisciplinary effort to standardize data collection and storage for environmental DNA.</p>
             <h6 class="text-white mb-2 mt-5">Find us on</h6>
             <div class="d-flex justify-content-center">
-              <a href="javascript:;"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
-              <a href="javascript:;"><i class="fab fa-instagram text-lg text-white me-4"></i></a>
-              <a href="javascript:;"><i class="fab fa-twitter text-lg text-white me-4"></i></a>
-              <a href="javascript:;"><i class="fab fa-google-plus text-lg text-white"></i></a>
+              <a href="https://www.facebook.com/MaineEPSCoR/"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
+              <a href="https://www.instagram.com/maine.epscor"><i class="fab fa-instagram text-lg text-white me-4"></i></a>
+              <a href="https://twitter.com/maineepscor"><i class="fab fa-twitter text-lg text-white me-4"></i></a>
+              <a href="https://umaine.edu/edna/"><i class="fab fa-house text-lg text-white"></i></a>
             </div>
           </div>
         </div>
