--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -972,7 +972,7 @@
                 </div>
                 <div class="col-lg-2 col-4">
                   <a href="https://github.com/app-generator/django-material-kit">
-                    <img src="{% static 'assets/img/logo-medna-dark.png' %}" class="img-fluid opacity-6" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Material Kit 2 - Free & Open Source Web UI Kit built over Bootstrap 5 by Creative Tim">
+                    <img src="{% static 'assets/img/logo-ct-dark.png' %}" class="img-fluid opacity-6" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Material Kit 2 - Free & Open Source Web UI Kit built over Bootstrap 5 by Creative Tim">
                   </a>
                 </div>
                 <div class="col-lg-2 col-4">
