updated house icon in about-us

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -25,7 +25,7 @@
               <a href="https://www.facebook.com/MaineEPSCoR/"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
               <a href="https://www.instagram.com/maine.epscor"><i class="fab fa-instagram text-lg text-white me-4"></i></a>
               <a href="https://twitter.com/maineepscor"><i class="fab fa-twitter text-lg text-white me-4"></i></a>
-              <a href="https://umaine.edu/edna/"><i class="fab fa-house text-lg text-white"></i></a>
+              <a href="https://umaine.edu/edna/"><i class="fas fa-home text-lg text-white"></i></a>
             </div>
           </div>
         </div>
