updated content in about-us template

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -25,8 +25,8 @@
               <a href="https://www.facebook.com/MaineEPSCoR/"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
               <a href="https://www.instagram.com/maine.epscor"><i class="fab fa-instagram text-lg text-white me-4"></i></a>
               <a href="https://twitter.com/maineepscor"><i class="fab fa-twitter text-lg text-white me-4"></i></a>
-              <a href="https://github.com/maine-edna/medna-metadata"><i class="fa fa-github text-lg text-white"></i></a>
-              <a href="https://umaine.edu/edna/"><i class="fas fa-home text-lg text-white"></i></a>
+              <a href="https://github.com/maine-edna/medna-metadata"><i class="fa fa-github text-lg text-white me-4"></i></a>
+              <a href="https://umaine.edu/edna/"><i class="fas fa-home text-lg text-white me-4"></i></a>
             </div>
           </div>
         </div>
@@ -41,36 +41,24 @@
         <div class="row">
           <div class="col-12 mx-auto">
             <div class="mt-n8 mt-md-n9 text-center">
-              <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{% static 'assets/img/bruce-mars.jpg' %}" alt="bruce" loading="lazy">
+              <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{% static 'assets/img/logo-medna-metadata.png' %}" alt="bruce" loading="lazy">
             </div>
             <div class="row py-5">
               <div class="col-lg-7 col-md-7 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
                 <div class="d-flex justify-content-between align-items-center mb-2">
                   <h3 class="mb-0">Michael Roven</h3>
-                  <div class="d-block">
-                    <button type="button" class="btn btn-sm btn-outline-info text-nowrap mb-0">Follow</button>
-                  </div>
-                </div>
-                <div class="row mb-4">
-                  <div class="col-auto">
-                    <span class="h6">323</span>
-                    <span>Posts</span>
-                  </div>
-                  <div class="col-auto">
-                    <span class="h6">3.5k</span>
-                    <span>Followers</span>
-                  </div>
-                  <div class="col-auto">
-                    <span class="h6">260</span>
-                    <span>Following</span>
-                  </div>
                 </div>
                 <p class="text-lg mb-0">
-                  Decisions: If you can’t decide, the answer is no.
-                  If two equally difficult paths, choose the one more
-                  painful in the short term (pain avoidance is creating
-                  an illusion of equality). Choose the path that leaves
-                  you more equanimous. <br><a href="javascript:;" class="text-info icon-move-right">More about me
+                  The Sequencing and Bioinformatics Metadata project is funded through the Maine-eDNA RII Track-1 EPSCoR
+                  grant supported by the National Science Foundation award #OIA-1849227. Maine-eDNA is a Maine coast-wide
+                  research effort to determine the efficacy of ecosystem monitoring through environmental DNA (eDNA).
+                  The metadata project is directly related to the goals of Theme 3: Macrosystem eDNA Integration, but also
+                  involved in Theme 1: Sustainable Fisheries and Theme 2: Harmful and Shifting Species. Our efforts
+                  contribute to the Data Management and Data Analysis Pipeline work groups. <br>
+                  The Sequencing and Bioinformatics Metadata project is a collaboration between the Coordinated Operating
+                  Research Entities (CORE) environmental DNA (eDNA) Laboratory and the Data Management Team to facilitate
+                  the development of a web application for the management and tracking of eDNA samples.  <br>
+                  <a href="https://umaine.edu/edna/" class="text-info icon-move-right">More about Maine-eDNA
                     <i class="fas fa-arrow-right text-sm ms-1"></i>
                   </a>
                 </p>
